centrado de iconos transform, navbar collapse, fix jumbotron

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,8 +8,8 @@ footer{
 
 
 #icon1, #icon2, #icon3{
-	position: relative;
-	left:21%;
+	display: block;
+	margin: auto;
 }
 
 body{
